--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </header>
         <hr>
         <section class="tela_inicio">
-            <img src="assets/GOTA-PNG.png" width="25%" height="40%">
+            <img src="assets/GOTA-PNG.png" class="imagem_inicio">
             <div class="inicio_div">
                 <h1 class="titulo">Banco de Sangue ETEC</h1>
                 <p class="participantes">Por Lucas Pereira, João Marcos, Iris Vitória</p>
-                <a class="botao_inicio" href="http://" target="_blank" rel="next"><img width="40%" height="40%" src="assets/Botao.png" alt="Botão"></a>
+                <a class="botao_inicio" href="pages/teste.php" rel="next"><img width="40%" height="40%" src="assets/Botao.png" alt="Botão"></a>
             </div>
         </section>
 
+        <a name="motivo"></a>
         <section class="secao_motivo">
-            <a name="motivo"></a>
             <div class="secao_div">
                 <h1 class="titulo_secao">Porque devemos doar sangue?</h1>
 				<ul class="lista_secao">
@@ -52,8 +52,8 @@
 			<img class="secao_imagem" src="assets/grafico-sangue.png" alt="Gráfico de tipos sanguinios">
         </section>
 
-        <section class="secao">
-            <a name="doacao"></a>
+        <a name="doacao"></a>
+        <section class="secao doacaosangue">
             <img class="secao_imagem" src="assets/doacaosangue.png" alt="Imagem de Doação">
 			<div class="secao_div">
                 <h1 class="titulo_motivo">Doação de Sangue no Brasil</h1>
@@ -63,8 +63,9 @@
             </div>
 		</section>
 
+        <a name="requisitos"></a>
         <section class="secao">
-            <h1 class="titulo_secao">Requisitos básicos:</h1><a name="requisitos"></a>
+            <h1 class="titulo_secao">Requisitos básicos:</h1>
             <ul class="lista_secao">
                 
                 <li class="lista_item">Boas condições de saúde;</li>
@@ -85,11 +86,11 @@
             </ul>
         </section>
 
+        <a name="tipagem"></a>
         <section class="secao">
-            <a name="tipagem"></a>
             <div class="secao_div">
                 <h1 class="titulo_secao">Tipagem Sanguínea</h1>
-                <p class="lista_item">
+                <p class="lista_item tipagem_texto">
                     A Tipagem Sanguínea é o processo de coleta e análise do sangue do paciente para identificar a qual grupo sanguíneo ele pertence. Além de facilitar na hora do atendimento, também é importantíssimo saber o tipo sanguíneo para doações de sangue, transfusões, gestação e outros atendimentos médicos. O procedimento de descoberta é rápido e indolor.
                     <br>
                     Com a amostra de sangue do paciente, o laboratório faz testes de compatibilidade em lâminas de sangue com reagentes. Assim, podemos descobrir se o paciente é tipo A, AB, B ou O. Anticorpos anti-A e anti-B são utilizados e determinam a presença ou ausência de antígenos A e B em nosso sangue.
