Seção de RH Sanguíneo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <a class="link_header" href="#motivo">Porque Doar</a>
             <a class="link_header" href="#doacao">Doação no Brasil</a>
             <a class="link_header" href="#requisitos">Requisitos</a>
-            <a class="link_header" href="#tipagem">Tipagem Sanguínia</a>
+            <a class="link_header" href="#tipagem">Tipagem Sanguínio</a>
+            <a class="link_header" href="#rh">RH Sanguínio</a>
         </header>
         <hr>
         <section class="tela_inicio">
@@ -53,13 +54,15 @@
         </section>
 
         <a name="doacao"></a>
-        <section class="secao doacaosangue">
+        <section class="secao invertido_secao">
             <img class="secao_imagem" src="assets/doacaosangue.png" alt="Imagem de Doação">
 			<div class="secao_div">
+
                 <h1 class="titulo_motivo">Doação de Sangue no Brasil</h1>
                 <p class="lista_item">
                     No Brasil apenas 1,8% da população é doadora de sangue, embora da meta da Organização Mundial de Saúde seja alcançar 3%. Isso ocorre por muitos fatores e, mesmo entre os poucos cidadãos dispostos a doar sangue, há altas taxas de impedimento. Quem doa pode ser motivado por amigos ou família, mas o principal objetivo é salvar vidas.
                 </p>
+
             </div>
 		</section>
 
@@ -89,14 +92,32 @@
         <a name="tipagem"></a>
         <section class="secao">
             <div class="secao_div">
+
                 <h1 class="titulo_secao">Tipagem Sanguínea</h1>
                 <p class="lista_item tipagem_texto">
                     A Tipagem Sanguínea é o processo de coleta e análise do sangue do paciente para identificar a qual grupo sanguíneo ele pertence. Além de facilitar na hora do atendimento, também é importantíssimo saber o tipo sanguíneo para doações de sangue, transfusões, gestação e outros atendimentos médicos. O procedimento de descoberta é rápido e indolor.
                     <br>
                     Com a amostra de sangue do paciente, o laboratório faz testes de compatibilidade em lâminas de sangue com reagentes. Assim, podemos descobrir se o paciente é tipo A, AB, B ou O. Anticorpos anti-A e anti-B são utilizados e determinam a presença ou ausência de antígenos A e B em nosso sangue.
                 </p>
+                
             </div>
             <img class="secao_imagem" src="assets/tipagem.png" alt="Imagem sobre Tipagem sanguínea">
+        </section>
+
+        <a name="rh"></a>
+        <section class="secao invertido_secao">
+            <img class="secao_imagem" src="assets/fator-rh.png" alt="Fator RH">
+            <div class="secao_div">
+                <h1 class="titulo_secao">RH Sanguíneo</h1>
+                <p class="lista_item">
+                    O agente Rh é uma proteína sanguínea que pode ou não estar presente no sangue humano. O Rh positivo quer dizer que a pessoa possui o antígeno Rh; já no Rh negativo, a pessoa não possui o antígeno Rh, logo, tem o anticorpo Anti-Rh.
+                    <br>
+                    O nome faz referência aos macacos da espécie Rhesus, que junto com coelhos, foram os cobaias dos pesquisadores Landsteiner e Wiener para a descoberta, nos anos 40.
+                    A técnica usada pelos cientistas foi a de injetar o sangue dos macacos nos coelhos. Eles notaram, assim, que os coelhos passavam a produzir anticorpos para combater as hemácias estranhas e o sangue aglutinava. Os anticorpos, por sua vez, foram nomeados anti-Rh.
+                    <br>
+                    É importante sabermos nosso fator Rh para no caso que precise fazer uma transfusão de sangue se emergência ou para o caso da gravidez onde a pessoa grávida tem um Rh negativo e o bebê positivo pois desenvolve anticorpos no decorrer de sua gestação, podendo trazer complicações nas próximas gravidezes.
+                </p>
+            </div>
         </section>
     </main>
 </body>
